Fixed left margin gap on site header

--- a/source/assets/css/cypress.styl
+++ b/source/assets/css/cypress.styl
@@ -443,6 +443,7 @@ table.plain tbody > tr:nth-child(odd) > th {
 #site-head-content {
     background: rgba(0, 0, 0, 0.4);
     color: rgba(255, 255, 255, 0.7);
+    margin-left: -2px;
     padding: 10px 1em;
     clearfix();
 }
